@@ -100,6 +100,7 @@ public:
 	bool Stop;			///< Stop command was. Flag prevent further execution
 	mglCommand *Cmd;	///< Table of MGL commands (can be changed by user). It MUST be sorted by 'name'!!!
 	long InUse;			///< Smart pointer (number of users)
+	const mglBase *curGr;	///< Current grapher
 
 	mglParser(bool setsize=false);
 	virtual ~mglParser();
