@@ -19,12 +19,16 @@
 15. Frames by mouse in UDAV ???
 	A. мысли о frame??? для группы графиков -- не "удалять" их, а запихивать в отдельный кадр -- вопрос что с анимацией???
 	B. как делать анимацию (кадры) для мышиной версии ... список кадров, кнопки добавить в кадры + вставить из кадра
-16. Docs about mgl_datac_diffr
 17. Extend QO + extra docs
 18. Import OBJ ???
 19. Simplified triangle filling for Quality=1 ?!?
 20. Extend 'ask' by adding multiple questions simultaneously (+ set/get default values from file ???)
 21. Occasional seg.fault in mgl_qt_example at exit
+
+22.  introduce a set of default arrays like "x", "y", "z" and "t" for MGL
+23. Use mgltex.dtx (see e-mail 15 November)
+25. Binary font files for particular platform (+ check ARM). Add utility to translate from current (textual) to binary.
+26. Segfault in shull_pro (e-mail 17 November)
 
 ZZ. Update *.i for new functions {before release!!!}
 
